--- a/css-class-id-selectors/style.css
+++ b/css-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: pink;
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 #two {
@@ -8,7 +8,7 @@
     font-size: 36px;
 }
 
-#tree {
+#three {
     font-size: 24px;
 }
 
